organize to have mu/utils.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,44 +35,4 @@ CPMAddPackage(
 	GIT_SHALLOW      TRUE
 )
 
-add_library(mu
-	src/utils.h
-	src/utils.cpp
-)
-
-target_link_libraries(mu
-	PUBLIC
-		fmt::fmt
-		$<$<PLATFORM_ID:Windows>:dbghelp>
-		${CMAKE_DL_LIBS}
-)
-
-set_property(TARGET mu
-	PROPERTY
-		CXX_STANDARD 20
-		CMAKE_CXX_STANDARD_REQUIRED YES
-		CMAKE_CXX_EXTENSIONS NO
-)
-
-target_compile_definitions(mu
-	PUBLIC
-		ASSETS_DIR="${CMAKE_SOURCE_DIR}/assets"
-		$<$<PLATFORM_ID:Windows>:UNICODE;_UNICODE>
-		$<$<PLATFORM_ID:Windows>:OS_WINDOWS=1>
-		$<$<PLATFORM_ID:Linux>:OS_LINUX=1>
-		$<$<PLATFORM_ID:Darwin>:OS_MACOS=1>
-		$<$<CXX_COMPILER_ID:Clang>:COMPILER_CLANG=1>
-		$<$<CXX_COMPILER_ID:AppleClang>:COMPILER_CLANG=1>
-		$<$<CXX_COMPILER_ID:AppleClang>:COMPILER_APPLE_CLANG=1>
-		$<$<CXX_COMPILER_ID:GNU>:COMPILER_GNU=1>
-		$<$<CXX_COMPILER_ID:MSVC>:COMPILER_MSVC=1>
-		$<$<CONFIG:DEBUG>:DEBUG>
-)
-
-if (${MU_PEDANTIC_BUILD})
-	target_compile_options(mu
-		PUBLIC
-			$<$<CXX_COMPILER_ID:MSVC>:/W4 /NODEFAULTLIB:library>
-			$<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -pedantic -Wno-nested-anon-types>
-	)
-endif()
+add_subdirectory(mu)
